Compiler/tests/typing/bad/testfile-assign-1.rs
fn main() { 
    x = 2; 
    return;
}
